# cpp-project-template

./: .gitignore  CMakeLists.txt  CONTRACT.md  DEV_LOG.md  Makefile  PROPOSAL.md  README.md  RESULTS.md  bake.sh  main.sh  run.sh  test.sh
a_star/: .gitignore  CMakeLists.txt  Makefile  main.cpp
a_star/include/: AStarAlgorithm.h
a_star/src/: AStarAlgorithm.cpp
a_star/tests/: test.cpp  test_astar.cpp
adder/: CMakeLists.txt  Makefile  main-adder  main.cpp  test-adder
adder/include/: adder.h
adder/src/: adder.cpp
adder/tests/: test_adder.cpp
bfs/: .gitignore  CMakeLists.txt  Makefile  build.sh  main.cpp
bfs/include/: BFS.h  GraphTraversal.h
bfs/src/: BFS.cpp  GraphTraversal.cpp
bfs/tests/: bfs-tests.cpp  test.cpp
data/: fake_edges.csv  fake_nodes.csv
pagerank/: .gitignore  CMakeLists.txt  Makefile  main.cpp  nodes.txt
pagerank/include/: pagerank.h
pagerank/src/: pagerank.cpp
pagerank/tests/: test_pagerank.cpp
parsing/: .gitignore  CMakeLists.txt  Makefile  build.sh  main-parsing  main.cpp  test-parsing
parsing-real/: CMakeLists.txt  Project.sln  main.cpp
parsing-real/include/: node.h
parsing-real/src/: node.cpp
parsing-real/tests/: test_node.cpp
parsing/include/: edge.h  node.h  parser.h  parser_header.h  t_node.h
parsing/src/: edge.cpp  node.cpp  parser.cpp
parsing/tests/: test.cpp  test_node.cpp  test_parser.cpp
parsing/tests/data/: edges_test.csv  nodes_test.csv
src/: .gitignore  CMakeLists.txt  Makefile  main.cpp
